[package]
name = "net"
description = "Generic interfaces for Translucence web APIs."
version = "0.1.0"
authors = ["Jeb Bearer <jeb.bearer@translucence.net>"]
edition = "2018"

[dependencies]
ark-serialize = { version = "0.3.0", features = ["derive"] }
ark-std = { version = "0.3.0", default-features = false }
bincode = "1.3.3"
commit = { git = "ssh://git@github.com/SpectrumXYZ/commit.git", rev = "f48cd52c59755eade0605111826eef3df6abdcf8" }
futures = "0.3.16"
generic-array = { version = "0.14.4", features = ["serde"] }
itertools = "0.10.1"
jf-aap = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "c789791d61b46e69367f07bb375c1ae2cf66e0d9" }
jf-utils = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
snafu = { version = "0.6.10", features = ["backtraces"] }
surf = "2.3.1"
tagged-base64 = { git = "ssh://git@github.com/SpectrumXYZ/tagged-base64.git", branch = "main"}
tide = "0.16.0"
tracing = "0.1.26"
