[package]
name = "net"
description = "Generic interfaces for Espresso web APIs."
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2018"

[dependencies]
ark-serialize = { version = "0.3.0", features = ["derive"] }
ark-std = { version = "0.3.0", default-features = false }
bincode = "1.3.3"
commit = { git = "https://github.com/EspressoSystems/commit.git", rev = "f48cd52c59755eade0605111826eef3df6abdcf8" }
futures = "0.3.16"
generic-array = { version = "0.14.4", features = ["serde"] }
itertools = "0.10.1"
jf-cap = { features=["std"], git = "https://github.com/EspressoSystems/cap.git", rev = "16ad157f96d2102d59206df0106fb341302180d3" }
jf-utils = { features=["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
snafu = { version = "0.6.10", features = ["backtraces"] }
surf = "2.3.1"
tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", branch = "main"}
tide = "0.16.0"
tracing = "0.1.26"
