[package]
name = "net"
description = "Generic interfaces for Espresso web APIs."
version = "0.3.1"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
ark-serialize = { version = "0.3.0", features = ["derive"] }
ark-std = { version = "0.3.0", default-features = false }
bincode = "1.3.3"
commit = { git = "https://github.com/EspressoSystems/commit.git", tag = "0.1.0" }
futures = "0.3.16"
generic-array = { version = "0.14.4", features = ["serde"] }
hex = "0.4"
itertools = "0.10.1"
jf-cap = { features=["std"], git = "https://github.com/EspressoSystems/cap.git", branch = "testnet-v1" }
jf-utils = { features=["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
snafu = { version = "0.7", features = ["backtraces"] }
surf = "2.3.1"
tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", tag = "0.3.0" }
tide = "0.16.0"
tracing = "0.1.26"

[dev-dependencies]
async-std = { version = "1.11", features = ["attributes"] }
